kubernetes/flask-service-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-2
spec:
  type: ClusterIP
  ports:
    - port: 5001
  selector:
    app: flask-app-2
