kubernetes/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: flask-app
